[package]
name = "hlpr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.8", features = ["derive"] }
lazy_static = "1.4.0"
openai = "1.0.0-alpha.12"
serde = "1.0.164"
serde_json = "1.0.99"
tokio = "1.28.2"
